fix: update box-shadow opacity for project images to enhance visibility

--- a/src/app/main-content/portfolio/projects/projects.component.scss
+++ b/src/app/main-content/portfolio/projects/projects.component.scss
@@ -44,7 +44,7 @@
     max-width: 95vw;
     height: 192px;
     max-width: 95vw;
-    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.8);
     border-radius: 20px;
     img{
         height: 100%;
